my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/WNDOCRA/WNDOCRA.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_WNDOCRA.dml:17:1: warning WNDOCRA: no documentation for required attribute 'A'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_WNDOCRA.dml:12:1: warning WNDOCRA: no documentation for required attribute 'C'
